force-app/main/default/objects/Object_Save_Mode__c/Object_Save_Mode__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Object Save Mode - control of switching ON/OFF validations, processes, workflows and Trigger logic for given user who will run data fix.</description>
    <label>Object Save Mode</label>
</CustomObject>