force-app/main/default/objects/Object_Save_Mode__c/fields/Disable_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Disable_Process_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Process Builder will be executed when field is set to True</description>
    <label>Disable Process Builder</label>
    <type>Checkbox</type>
</CustomField>