force-app/main/default/objects/Object_Save_Mode__c/fields/Disable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Tiggers will be executed when field is set to True</description>
    <label>Disable Trigger</label>
    <type>Checkbox</type>
</CustomField>