force-app/main/default/objects/Object_Save_Mode__c/fields/Disable_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Disable_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Workflow will be executed when field is set to True</description>
    <label>Disable Workflow</label>
    <type>Checkbox</type>
</CustomField>