force-app/main/default/objects/Object_Save_Mode__c/fields/DisableValidation__c.field-meta.xml
<CustomField>
    <fullName>DisableValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No validations will be executed when field is set to True</description>
    <label>Disable Validation</label>
    <type>Checkbox</type>
</CustomField>