force-app/main/default/objects/Object_Save_Mode__c/fields/Full_Logic_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Full_Logic_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No validations, processes, workflows and triggers will be executed when field is set to True</description>
    <label>Full Logic Disabled</label>
    <type>Checkbox</type>
</CustomField>